kubernetes/platform/base/ingress/traefik/app/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: ingress
  labels:
    external-dns: internal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: >-
      services-lan-allowlist@kubernetescrd,
      services-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.lan.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
  tls:
    - hosts:
        - traefik.lan.${DOMAIN_NAME}
