kubernetes/platform/base/ingress/traefik/app/dashboard-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lan.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: lan-allowlist
          namespace: services
        - name: authentik-forwardauth
          namespace: services
  tls: {}
